--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 click==6.7
 DateTime==4.2
 Flask==1.0.2
+Flask-WTF==0.14.2
 googlemaps==3.0.2
 idna==2.7
 itsdangerous==0.24
@@ -12,4 +13,5 @@ pytz==2018.5
 requests==2.19.1
 urllib3==1.23
 Werkzeug==0.14.1
+WTForms==2.2.1
 zope.interface==4.5.0
